package es.tiernoparla.daw.mercadaw.model.entity.persona;

public class Persona {
    
}
