@startuml Diagrama de Clases Modelo
allow_mixing
set namespaceSeparator none

package es.tiernoparla.daw.mercadaw.model #CadetBlue {

    package database #LightGoldenRodYellow {

        interface MercaDawDAO #Violet{
            + insertar(p: Producto) : int
            + insertar(e: Empleado) : int
            + insertar(productos: List<Producto>) : int
            + insertar(empleados: List<Empledo>) : int
            + actualizar(p: Producto) : int
            + actualizar(e: Empleado) : int
            + listarProductos() : List<Producto>
            + listarEmpleados() : List<Empleado>
        }

        class MercaDawDAOImp #LightGreen {

        }
    }
    
    interface MercaDaw #Violet {
        'Provisional basandonos en la anterior practica

        + altaEmpleado(e: Empleado)
        + altaProducto(p: Producto)
        + imprimirEmpleados() : String
        + imprimirProductos() : String
    }

    class Sede #LightGreen {
        'Provisional basandonos en la anterior practica

        + imprimirPrecioVenta() : String
        + imprimirEtiqueta() : String
    }

    abstract class Persona #LightSkyBlue {
        - nombre : String
        - apellidos : String
    }

    class Empleado #LightGreen {
        + CATEGORIA : Categoria = Empleado {static}
        + SUELDO : int = 1000 {static}

        - id : int
    }

    class Reponedor #LightGreen {
        + CATEGORIA : Categoria = Reponedor {static}
        + SUELDO : int = 1200 {static}
    }

    class Cajero #LightGreen {
        + CATEGORIA : Categoria = Cajero {static}
        + SUELDO : int = 1300 {static}
    }

    class Encargado #LightGreen {
        + CATEGORIA : Categoria = Encargado {static}
        + SUELDO : int = 1500 {static}
    }

    class Cliente #LightGreen {
        - codPostal : int
        - correoElectronico : String
    }

    abstract class Producto #LightSkyBlue {
        'Por completar, y falta añadir las clases hijas
    }
}

MercaDaw <|.. Sede
Sede o-- Producto
Sede o-- Empleado

Persona <|-- Cliente
Persona <|-- Empleado
Empleado <|-- Reponedor
Empleado <|-- Cajero
Empleado <|-- Encargado

MercaDawDAO <|.. MercaDawDAOImp

@enduml